@@ -5,11 +5,10 @@ COPYING
 lib/Travel/Status/DE/DeutscheBahn.pm
 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 MANIFEST			This list of files
-META.json
-META.yml
 README
 t/00-compile-pm.t
 t/01-compile-pl.t
 t/10-pod-coverage.t
 t/20-db.t
+META.yml
 SIGNATURE    Added here by Module::Build
