@@ -17,18 +17,19 @@ name: Travel-Status-DE-DeutscheBahn
 provides:
   Travel::Status::DE::DeutscheBahn:
     file: lib/Travel/Status/DE/DeutscheBahn.pm
-    version: 0.01
+    version: 0.02
   Travel::Status::DE::DeutscheBahn::Result:
     file: lib/Travel/Status/DE/DeutscheBahn/Result.pm
-    version: 0.01
+    version: 0.02
 requires:
   Carp: 0
   Class::Accessor: 0.16
   Getopt::Long: 0
   LWP::UserAgent: 0
   List::Util: 0
+  POSIX: 0
   XML::LibXML: 1.70
   perl: v5.10.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
