@@ -14,16 +14,15 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-SHA1 da217496860387a2833bec0b3376227bcfc3c1d6 Build.PL
+SHA1 9092369f983fc97ae053bdda71a0e764cddaedc1 Build.PL
 SHA1 d0f2060d740ce428f14c47b7f9cc2c65bf66cd7b COPYING
-SHA1 93de4df16ede4f192f9f15afcfdab2227f078043 Changelog
-SHA1 69044c20f009be8bdfe154a68b34db4187db6f24 MANIFEST
-SHA1 5dc0310e1a44972a91b0f618a08479a7a96992ef META.json
-SHA1 da7c7125bea05213a6d61b459b52182085eb55e8 META.yml
+SHA1 6bed086c30d534e53f8c4e82d5970a275091441a Changelog
+SHA1 5d360ea3f5b7b3f1959d3323e138c5828c12f2d5 MANIFEST
+SHA1 d2faa6f5fcf684dee31ae080ec3e07aba3027500 META.yml
 SHA1 57d264edff2b9a955b13a068a8fc376da2d2a0a5 README
-SHA1 138cc813aa9fbdf8969212297ab8d8688140b4de bin/db-ris
-SHA1 e16e7ae978e17f42ae0090869b6d34e988cd3578 lib/Travel/Status/DE/DeutscheBahn.pm
-SHA1 d7150fcbc7b9cc194e688af981509ee35565ced5 lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 4434bbc7049805034c90899b5aac577e260f6310 bin/db-ris
+SHA1 5f325f6a2ee9ec5793e84af29b34850e8ea0ba7b lib/Travel/Status/DE/DeutscheBahn.pm
+SHA1 4d7bd58799e4c5c8a21fb6a973320e2e242b5139 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 SHA1 6cfaebdb4d57688b8ac50f3e840a99a48c15457b t/00-compile-pm.t
 SHA1 3adfc7da6082f15051da7fbda884723388738b61 t/01-compile-pl.t
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
@@ -31,17 +30,17 @@ SHA1 c52e752f089f38edb3baa206699018167cdb6249 t/20-db.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQIcBAEBCAAGBQJOCPssAAoJEBANW/tRZuAFpT8QAM8zKvdPS1FeTEMFBD3l8fK0
-5SyAIUaoJwgynNZrYQ7thplA0IeiwKw8g+IIC2NGbbZ4QHlw6SzUSF88xf5mMzfh
-gMJpbqweFJG23bbDkwLsG+AHiBuE9zgerABk228a21NMGiptGhUrVF4P3tTBMqKc
-1fQlYULg8jbUmq1glJqCJlW/pDBcfrpwf53Dgt95ZwD7Nhzc5M5y9Gx6B8ZnorY6
-8kvo1o7/ZEgoVRtY+Br0G5DscmP2cPWv/jkmWoH5TVMdDUxKybgBFrPFiRx/z8jh
-wjOwoV2z7w/m9If9yEAvRizLeeBSd3Anb7OvS1dvFaDXaIU7dX2jxVlzb0v66wyO
-4E+eWWQnuEVnHWBAE8pCDj/CmHkIMNvHfoULc6kNRKX0sZ9oU28dKYMBgQKgEOVz
-LTB5dqOPuhikayRY2CAmp5xN/sdThFKGtfdfsBmefaV9WEg4kuxZ4PtTHVhdblwO
-g5bQFFpD5cEzy9/xbJB+APNfneW1pMhEr7kNvyAc3zj9YEDmNkMjQQAK7wTj5u5v
-0C3dgCf/0dZvYtr9iAFwqcrr3UfrXbAfi220slIV5JcSHM5yxvgKwQrjqFCFNnVC
-ZgMinhJza2WoAAHJjp9BwfQKLAP7HyLVRLGqXQ8it6GPQtOH3n55Iy34+en2bnNi
-H4pR18bZQzKFF6PljR0X
-=7vJe
+iQIcBAEBCAAGBQJOFJ5bAAoJEBANW/tRZuAFKZcQAIVZWcaScKExMoNlWuAZeU1P
+Vx3mtUyH+ejRh1d20B1/LY0HDeKS+/J+mGaRYh8vKTGGEtHfVsZft7qrszTiiTEr
+BDYFUmDOcGdIpqwHFjV4GNJuXiYgEGe/zchVhPa+1ULPqhIN/4nBdEqVcFwmTa/R
+K8pwmk8AKa+pm2Vt8pUDZC5Vl1TXJ6E2ag8DWrY4zK611YyolpTmzIYcIWji6WLb
+n/vGJxk4+Loj17y4nfCoaYQ4poAhPeaslyqAP1Rp4EHpnw68pdicOAhh3vlPVeYY
+UNOojycZXQ4EG8j1KTNCDxUBO34bg/E84iOmSwSq3yukUity4ygctMu/YDGHz9Er
+h80Q7sLeMyD8Ixp2prhPDG6pegODwKxEYiZ5gRd2EgOEG/aaeshpHw5rmPmNERVP
+i0y22WsSFglCi4HYUJkwqzNb5xTakIWcVKsi0kqC2seu/3+CWUkDZFM3LtAWhzkU
+PxCTTQTKQndKcDo5UB4iRIpNqEbdrUAS4jXxWrUEBd0QzpSVGS9NlwWzvb1do6BC
+gEP8P8a+h9be6sHZ9y1GxbeifEVJ+/tPxQmb3kS6QiXuufb4aW3Mgicbrd0Jl3Ra
+75a4Ul6Sv8tr7tCHaHMoG1DpoHJ02f/bqkzUcW5PykL9f+oBHVs4/y2TCSBKxZI6
+3843Lx18rnTGb/DYwolO
+=TUJo
 -----END PGP SIGNATURE-----
