@@ -3,27 +3,31 @@ use strict;
 use warnings;
 use 5.010;
 
-our $VERSION = '0.01';
+our $VERSION = '0.02';
 
 use Getopt::Long qw(:config no_ignore_case);
 use List::Util qw(first max);
 use Travel::Status::DE::DeutscheBahn;
 
-my ( $date, $time );
-my $types = q{};
 my %train_type;
+
+my ( $date, $time );
 my $filter_via;
+my $ignore_late = 0;
+my $types       = q{};
+
 my @output;
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
 GetOptions(
-	'd|date=s'  => \$date,
-	'h|help'    => sub { show_help(0) },
-	'm|mot=s'   => \$types,
-	't|time=s'  => \$time,
-	'v|via=s'   => \$filter_via,
-	'V|version' => \&show_version,
+	'd|date=s'      => \$date,
+	'h|help'        => sub { show_help(0) },
+	'L|ignore-late' => \$ignore_late,
+	'm|mot=s'       => \$types,
+	't|time=s'      => \$time,
+	'v|via=s'       => \$filter_via,
+	'V|version'     => \&show_version,
 
 ) or show_help(1);
 
@@ -80,6 +84,16 @@ sub display_result {
 	return;
 }
 
+sub filter_info {
+	my ($info) = @_;
+
+	if ( $info =~ m{ ^ (?: p.nktlich | k [.] A [.] ) $ }ox ) {
+		return q{};
+	}
+
+	return $info;
+}
+
 sub filter_via {
 	my (@via) = @_;
 
@@ -122,9 +136,15 @@ for my $d ( $status->results() ) {
 
 	my ( @via, @via_main, @via_show );
 
+	my $re_late = qr{ (?: ^ | , ) ca[.] \s \d+ \s Minuten \s sp.ter}ox;
+
 	@via = $d->route;
 
 	if ( $filter_via and not( first { $_ =~ m{$filter_via}io } @via ) ) {
+		next;
+	}
+
+	if ( $ignore_late and $d->info =~ $re_late ) {
 		next;
 	}
 
@@ -133,7 +153,7 @@ for my $d ( $status->results() ) {
 		[
 			$d->time, $d->train,
 			join( q{  }, filter_via(@via) ), $d->destination,
-			$d->platform, $d->info
+			$d->platform, filter_info( $d->info )
 		]
 	);
 }
@@ -148,12 +168,12 @@ db-ris - Interface to the DeutscheBahn online departure monitor
 
 =head1 SYNOPSIS
 
-B<db-ris> [B<-d> I<date>] [B<-m> I<motlist>] [B<-t> I<time>] [B<-v> I<via>]
-I<station>
+B<db-ris> [B<-d> I<date>] [B<-L>] [B<-m> I<motlist>] [B<-t> I<time>]
+[B<-v> I<via>] I<station>
 
 =head1 VERSION
 
-version 0.01
+version 0.02
 
 =head1 DESCRIPTION
 
@@ -170,7 +190,11 @@ departure screens installed at most main stations.
 
 =item B<-d>, B<--date> I<dd>.I<mm>.I<yyyy>
 
-Date to list departures for.  Default: today
+Date to list departures for.  Default: today.
+
+=item B<-L>, B<--ignore-late>
+
+Do not display delayed trains.
 
 =item B<-m>, B<--mot> I<motlist>
 
@@ -205,7 +229,7 @@ may not work as expected.
 
 =item B<-V>, B<--version>
 
-Show version information
+Show version information.
 
 =back
 
