@@ -1,3 +1,15 @@
+Travel::Status::DE::DeutscheBahn 0.02 - Wed Jul 06 2011
+
+    [db-ris]
+    * Only display info when a train is late, not when on time / unknown
+    * Add --ignore-late option
+
+    [Travel::Status::DE::DeutscheBahn]
+    * Add route_raw accessor
+    * Proper HTTP request error handling
+    * Strip leading whitespace from ::Result info
+    * Do not include canceled stops in the route
+
 Travel::Status::DE::DeutscheBahn 0.01 - Mon Jun 27 2011
 
     * Initial release
